Youtube iframe API을 사용한 페이지 동영상 추가 , gsap을 사용한 배경 이미지 애니메이션 추가, Parallax Scrolling (패럴랙스 스크롤링)를 이용한 section 추가,

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"
     integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script defer src="./main.js"></script>
+  <script defer src="./js/youtube.js"></script>
+  <script defer src="./js/main.js"></script>
   <title>Starbucks Coffee Korea</title>
 </head>
 
@@ -414,7 +415,7 @@
               <div class="swiper-slide">
                 <a href="#">[당첨자 발표] 뉴이어 전자영수증 이벤트</a>
               </div>
-              
+
             </div>
           </div>
           <a href="javascript:void(0)" class="notice-line__more">
@@ -432,38 +433,131 @@
 
     <div class="promotion">
       <div class="swiper-container">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img src="./images/promotion_slide1.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요~">
-              <a href="javascript:void(0)" class="btn">자세히 보기</a>
-            </div>
-            <div class="swiper-slide">
-              <img src="./images/promotion_slide2.jpg" alt="기간 내 스타벅스 카드 e-Gift를 3만원 이상 선물 시, 아메리카노 e-쿠폰을 드립니다.~">
-              <a href="javascript:void(0)" class="btn">자세히 보기</a>
-            </div>
-            <div class="swiper-slide">
-              <img src="./images/promotion_slide3.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요~">
-              <a href="javascript:void(0)" class="btn">자세히 보기</a>
-            </div>
-            <div class="swiper-slide">
-              <img src="./images/promotion_slide4.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요~">
-              <a href="javascript:void(0)" class="btn">자세히 보기</a>
-            </div>
-            <div class="swiper-slide">
-              <img src="./images/promotion_slide5.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요~">
-              <a href="javascript:void(0)" class="btn">자세히 보기</a>
-            </div>
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide1.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!" />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
           </div>
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide2.jpg" alt="기간 내 스타벅스 카드 e-Gift를 3만원 이상 선물 시, 아메리카노 e-쿠폰을 드립니다." />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide3.jpg" alt="뉴이어 푸드와 제조 음료를 세트로 구매 시, 뉴이어 음료 BOGO(1+1) 쿠폰을 드립니다." />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide4.jpg" alt="신년 MD 상품 포함 3만원 이상 구매 고객께 아메리카노(톨사이즈) 쿠폰을 드립니다." />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide5.jpg" alt="2017 DIGITAL LUCKY DRAW 100% 당첨의 행운을 드립니다!" />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
+          </div>
+        </div>
       </div>
       <div class="swiper-pagination"></div>
-      <div class="swiper-prev"></div>
-      <div class="wiper-next"></div>
+      <div class="swiper-prev">
+        <div class="material-icons">arrow_back</div>
+      </div>
+      <div class="swiper-next">
+        <div class="material-icons">arrow_forward</div>
+      </div>
     </div>
 
   </section>
 
+  <!-- REWARDS -->
+  <section class="rewards">
+    <div class="bg-left"></div>
+    <div class="bg-right"></div>
 
-  <section></section>
+    <div class="inner">
+      <div class="btn-group">
+        <div class="btn btn--reverse sign-up">회원가입</div>
+        <div class="btn log-in">로그인</div>
+        <div class="btn gift">e-Gift 선물하기</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- YOUTUBE VIDEO -->
+  <section class="youtube">
+    <div class="youtube__area">
+      <div id="player"></div>
+    </div>
+    <div class="youtube__cover"></div>
+    <div class="inner">
+      <img src="./images/floating1.png" alt="Icon" class="floating floating1" />
+      <img src="./images/floating2.png" alt="Icon" class="floating floating2" />
+    </div>
+  </section>
+
+  <!-- SEASON PRODUCT -->
+  <section class="season-product">
+    <div class="inner">
+
+      <img src="./images/floating3.png" alt="Icon" class="floating floating3" />
+      <img src="./images/season_product_image.png" alt="" class="product">
+
+      <div class="text-group">
+        <img src="./images/season_product_text1.png" alt="" class="title">
+        <img src="./images/season_product_text2.png" alt="" class="description">
+        <div class="more">
+          <a href="javascript:void(0)" class="btn">자세히 보기</a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- RESERVE COFFE -->
+  <section class="reserve-coffee">
+    <div class="inner">
+      <img src="./images/reserve_logo.png" alt="reserve_logo" class="reserve-logo">
+
+      <div class="text-group">
+        <img src="./images/reserve_text.png" alt="reserve_text">
+        <div class="more">
+          <a href="javascript:void(0)" class="btn btn--gold">자세히 보기</a>
+        </div>
+      </div>
+
+      <img src="./images/reserve_image.png" alt="" class="product">
+
+    </div>
+  </section>
+
+  <!-- PICK YOUR FAVORITE -->
+  <section class="pick-your-favorite">
+    <div class="inner">
+      <div class="text-group">
+        <img src="./images/favorite_text1.png" alt="" class="title">
+        <img src="./images/favorite_text2.png" alt="" class="description">
+        <div class="more">
+          <a href="javascript:void(0)" class="btn btn--white">자세히 보기</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- RESERVE STORE -->
+  <section class="reserve-store">
+    <div class="inner">
+      <div class="medal">
+        <div class="front">
+          <img src="./images/reserve_store_medal_front.png" alt="" />
+        </div>
+        <div class="back">
+          <img src="./images/reserve_store_medal_back.png" alt="" />
+          <a href="javascript:void(0)" class="btn">매장안내</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
   <footer></footer>
 </body>
 
